--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -272,7 +272,12 @@
                                             </form>
                                         </div>
                                     </li>
-
+                                    @if (userRole != "Customer" && userRole != "Rider" && userRole != "Admin" && userRole != "Farmer")
+                                    {
+                                        <li class="nav-item" style="margin-left:115px; position: relative;">
+                                          
+                                        </li>
+                                    }
 
                                     <li class="nav-item" style="margin-left:25px; position: relative;">
                                         <a class="nav-link" asp-area="Customer" asp-controller="Notifications" asp-action="Latest">
